--- a/Main-Page.html
+++ b/Main-Page.html
@@ -386,7 +386,7 @@ document.body.classList.add(localStorage.getItem("viewmode") || "grid");
 
 var programData=[
           {name: "Suprise??", url: "Main-Page.html", icon: {url:"fireworks"}, keywords: "bonk,bonkpage,fun,game"},
-          {name: "Skibidi", url: "snake.io", icon: {url:"fireworks"}, keywords: "bonk,bonkpage,fun,game"},
+          {name: "Skibidi", url: "https://snake.io.com", icon: {url:"fireworks"}, keywords: "bonk,bonkpage,fun,game"},
           {name: "Poly Track", url: "https://www.kodub.com/apps/polytrack", icon: {url:"bezier"}, keywords: "pirates,idk,set,"},
           {name: "Bonk", url: "https://bonk.io", icon: {url:"fireworks"}, keywords: "bonk,bonkpage,fun,game"},
           {name: "digdig.io", url: "https://digdig.io", icon: {url:"fireworks"}, keywords: "bonk,bonkpage,fun,game"},
